# pidm_warm_start_rl

./: .gitignore  Agents.md  FLOWCHART.md  IMPLEMENTATION_PROGRESS_HANDOFF.md  PIDM_Literature_Review.md  PIDM_RESEARCH_IDEAS.md  README.md  SUPPORT.md  pidm_ssm_implementation_brief.md  pyproject.toml  ssidm_integration_plan.md
configs/supervised_learning/: bc_example.yaml  bc_initial.yaml  bc_non_smoke.yaml  bc_smoke.yaml  lssidm_example.yaml  lssidm_initial.yaml  lssidm_non_smoke.yaml  lssidm_silu_initial.yaml  lssidm_silu_non_smoke.yaml  lssidm_silu_prenorm_initial.yaml  lssidm_silu_prenorm_non_smoke.yaml  lssidm_silu_prenorm_smoke.yaml  lssidm_silu_smoke.yaml  lssidm_smoke.yaml  pidm_example.yaml  pidm_initial.yaml  pidm_non_smoke.yaml  pidm_smoke.yaml  pssidm_example.yaml  pssidm_initial.yaml  pssidm_non_smoke.yaml  pssidm_silu_initial.yaml  pssidm_silu_non_smoke.yaml  pssidm_silu_prenorm_initial.yaml  pssidm_silu_prenorm_non_smoke.yaml  pssidm_silu_prenorm_smoke.yaml  pssidm_silu_smoke.yaml  pssidm_smoke.yaml
configs/toy_env/: toy_env_four_room.yaml  toy_env_large_maze.yaml  toy_env_multiroom.yaml  toy_env_two_room.yaml  toy_env_zigzag.yaml
datasets/: README.md  dataset_datasheet.json
datasets/four_room_astar_data/: four_room_astar_00_inputs.json  four_room_astar_00_observations.npz  four_room_astar_00_states.npz  (+214 more)
experiments/: README.md  common.py  orchestrator.py  plotter.py  runner.py
oss_configs/: experiment_suite.yaml  generate_configs_human.py
pidm_imitation/: constants.py  toy_evaluate_model.py
tests/: test_ssidm_core.py  test_ssidm_integration.py
(+1686 files in other folders)
